src/test/ui/resolve/enums-pats-not-idents.rs
fn main() {
    let a(1) = 13; //~ ERROR cannot find tuple struct or tuple variant `a` in this scope
}
